syntax = "proto3";

package no.nav.pdlsf.proto;

option java_package = "no.nav.pdlsf.proto";
option java_outer_classname = "PdlSfValuesProto";

// this message will be the key part of kafka payload
message SfObjectEventKey {
  string aktoer_id = 1;
  enum SfObjectType {
    PERSON = 0;
    ACCOUNT = 1;
  }
  SfObjectType sf_object_type = 2;
}

// this message will be the value part of kafka payload
message AccountValue {

  string identifikasjonsnummer = 1;
  string fornavn = 2;
  string mellomnavn = 3;
  string etternavn = 4;
}

message PersonValue {

  string identifikasjonsnummer = 1;
  Gradering gradering = 2;
  string sikkerhetstiltak = 3;
  string kommunenummer = 4;
  string region = 5;

  enum Gradering {
    STRENGT_FORTROLIG_UTLAND = 0;
    STRENGT_FORTROLIG = 1;
    FORTROLIG = 2;
    UGRADERT = 3;
  }
}